<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParkSpy</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Find Parking Risk</string>
    <string name="search">Run Search</string>
    <string name="go_to_search">Return to Search</string>
    <string name="map">Search Via Map</string>
    <string name="current_location">Use current location</string>
    <string name="address">Where are you parking?</string>
    <string name="time">When are you going to park?</string>
    <string name="length">How long will you stay for?</string>
    <string name="results">Search Results</string>
    <string name="risk_factor">Risk Score</string>
	<string name="number_of_tickets"># of Tickets Issued in Zone</string>
	<string name="average_ticket_price_title">Average Ticket Price</string>
	<string name="map_search">Search Here</string>
	<string name="map_results">View Map</string>
	<string name="zone">One Zone = Approximately One City Block</string>
	<string name="recommendation_title">Recommendation</string>
	<string name="now">Now</string>
	<string name="later">Later</string>
	<string name="overview">This app is meant to act as a guide for parking in Toronto. A low risk score does not necessarily guarantee you can park somewhere worry free. For example, the DVP would be rated as low risk for parking, but it wouldn\'t be a good idea to park there. Use common sense when parking, legally or otherwise.</string>
    <string name="email">support@koalify.com</string>
    <string name="copyright">\u00A9 Koalify 2013</string>
    <string name="opendata">Data from the City of Toronto\'s Open Data License v2.0</string>
    <string-array name="length_of_stay">
        <item>Less than 1 hour</item>
        <item>1 hour</item>
		<item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>More than 8 hours</item>
    </string-array>

</resources>