<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/cool_gradient"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/google"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/google_title"
	        android:layout_below="@+id/google_title"
	        android:layout_marginTop="10dp"
	        android:text="TextView"
	        android:textSize="10sp"
	        android:textColor="@color/white" />

	    <TextView
	        android:id="@+id/overview_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:text="App Overview"
	        android:textColor="@color/white"
	        android:textSize="18sp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/overview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/overview_title"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/overview"
	        android:textColor="@color/white"
	        android:textSize="14sp" />

	    <TextView
	        android:id="@+id/support"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/overview"
	        android:layout_below="@id/overview"
	        android:layout_marginTop="10dp"
	        android:text="Want to get in touch?"
	        android:textColor="@color/white"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/support"
	        android:layout_below="@id/support"
	        android:layout_marginTop="10dp"
	        android:text="@string/email"
	        android:textColor="@color/white" />

	    <TextView
	        android:id="@+id/opendata"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/opendata_title"
	        android:layout_below="@+id/opendata_title"
	        android:layout_marginTop="10dp"
	        android:text="@string/opendata"
	        android:textColor="@color/white"
	        android:textSize="10sp" />

	    <TextView
	        android:id="@+id/google_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/email"
	        android:layout_below="@id/email"
	        android:layout_marginTop="10dp"
	        android:text="Google Maps Attribution"
	        android:textColor="@color/white"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/opendata_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/google"
	        android:layout_below="@id/google"
	        android:layout_marginTop="10dp"
	        android:text="Data Attribution"
	        android:textColor="@color/white"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/copyright"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/opendata"
	        android:layout_below="@id/opendata"
	        android:layout_marginTop="10dp"
	        android:text="@string/copyright"
	        android:textColor="@color/white"
	        android:textSize="10sp" />
	
	</RelativeLayout>
</ScrollView>